# vireo_tutorial_1

./: CMakeLists.txt  README.md
cmake/: libraries.cmake  shaders.cmake
include/: Libraries.h  Macros.h  Win32Libraries.h
src/: Application.ixx  MyApp.cpp  MyApp.ixx  MyAppMain.cpp
src/os/windows/: Win32Application.cpp  Win32Application.ixx
src/platform/sdl/: SDLApplication.cpp  SDLApplication.ixx
src/platform/windows/: Win32Application.cpp  Win32Application.ixx
src/shaders/: triangle_color.slang
